--- CHANGELOG ---

--- Assimulo-3.5.2 ---
    * Allow to build without distutils for Python>=3.12 support

--- Assimulo-3.5.1 ---
    * Fixed build with sundials 7.x
    * Added "std=legacy" as default fortran compile flag. 
      This addresses compilation issues commonly experienced with more modern Fortran standards.

--- Assimulo-3.5.0 ---
    * Changed "numpy.float" to equivalent "numpy.float64" due to DeprecationWarnings in numpy >= 1.20.
    * Improved examples with sparse jacobians by omitting the zeros in the jacobians.
    * Upgraded to Cython >= 3.
    * Removed deprecated build option "sundials_with_superlu", which is checked automatically.
    * Added support for Sundials 7.x

--- Assimulo-3.4.3 ---
    * Improved compliance with newer scipy version by instead using corresponding numpy calls when more suitable.

--- Assimulo-3.4.2 ---
    * Updated an import statement in one of the examples to resolve compliance issues with scipy 1.10.1.

--- Assimulo-3.4.1 ---
    * Restored functionality of CVode with 'external_event_detection' = True, which broke with 3.4.0.
    * CVode now allows rtol = 0.
    * Added support for CVode (without sensitivities) with non-negative relative tolerance vector.
      Requires a SUNDIALS installation supporting this, see README.

--- Assimulo-3.4.0 ---
    * Removed Radau5ODE Fortran implementation. 
      This change should be seamless since the C implementation is numerically equivalent.
    * Radau5 C with SuperLU now requires compilation with '-D__RADAU5_WITH_SUPERLU'
    * Refactored Radau5 C implementation; moved to thirdparty/radau5/.
    * Replaced event localization for explicit problems with an equivalent C implementation.
    * Added missing counts on event indicator evaluations when setting problem data in solvers.
    * Fixed Radau5 bug where simulation would not stop when time limit has been exceeded.